# tugas_jda

./: pyproject.toml
data_csv/: ac.csv  roles.csv  service.csv  users.csv
personal_project_progress_1/: progress_1_rifdi_009.odt
src/tugas/: main.py
src/tugas2/: main.py
