[project]
name = "tugas_jda"
version = "0.1.0"
description = "Tugas JDA x Alkademi 2024"
authors = [
    {name = "rfdzan", email = "hekodev.py@gmail.com"},
]
dependencies = [
    "mysql-connector-python>=8.4.0",
    "python-dotenv>=1.0.1",
    "black>=24.4.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
[tool.pdm.scripts]
start = "python src/tugas/main.py"
